enhance error message when a command can not be executed